--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
+        "browsable",
         "Exfiltration",
         "mitigations",
         "stix",
         "subt",
         "subtech",
         "subtechnique",
-        "subtechniques"
+        "subtechniques",
+        "venv",
+        "vincenzocaputo"
     ]
 }
