Update for release

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "browsable",
         "Exaramel",
         "Exfiltration",
+        "gmtime",
         "mitigations",
         "stix",
         "subt",
