--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -38,3 +38,4 @@ jobs:
           VALIDATE_PYTHON_BLACK: false
           VALIDATE_PYTHON_FLAKE8: false
           VALIDATE_PYTHON_PYLINT: false
+          VALIDATE_JSCPD: false
