--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -39,3 +39,4 @@ jobs:
           VALIDATE_PYTHON_FLAKE8: false
           VALIDATE_PYTHON_PYLINT: false
           VALIDATE_JSCPD: false
+          VALIDATE_PYTHON_MYPY: false
