--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "browsable",
+        "Dataview",
         "Exaramel",
         "Exfiltration",
         "gmtime",
+        "inlinks",
         "mitigations",
         "stix",
         "subt",
