--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,16 @@
 {
     "cSpell.words": [
+        "ADVSTORESHELL",
         "browsable",
         "Dataview",
         "Exaramel",
+        "exfiltrated",
         "Exfiltration",
         "gmtime",
         "inlinks",
+        "Mimikatz",
         "mitigations",
+        "Spearphishing",
         "stix",
         "subt",
         "subtech",
