--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Copy configuration file
-        run: cp default-config.yml config.yml
+        run: cp default-config.toml config.toml
 
       - name: Create output
         run: python3 . -o MITRE
