--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "ADVSTORESHELL",
+        "antlr",
         "browsable",
         "datasources",
         "Dataview",
@@ -11,6 +12,7 @@
         "inlinks",
         "Mimikatz",
         "mitigations",
+        "softprops",
         "Spearphishing",
         "stix",
         "subt",
