--- a/default-config.toml
+++ b/default-config.toml
@@ -1,4 +1,4 @@
-repository_url: https://raw.githubusercontent.com/mitre-attack/attack-stix-data/master
-output_dir: output
-version: 16.1
-verbose: true
+repository_url = "https://raw.githubusercontent.com/mitre-attack/attack-stix-data/master"
+output_dir = "output"
+version = "16.1"
+verbose = true
