More code clean up

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,19 +21,18 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12"
+          python-version: 3.13
+      - run: uv build
 
-      - name: Install requirements
-        run: pip install -r requirements.txt
 
       - name: Copy configuration file
         run: cp default-config.toml config.toml
 
       - name: Create output
-        run: python3 . -o MITRE
+        run: uv run obsidian-mitre-attack -o MITRE --tags "mitre/"
 
       - name: Create dist directory
         run: mkdir dist
