--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,6 +13,7 @@ on:
 
 permissions:
   contents: read
+  statuses: write
 
 # A workflow run is made up of one or more jobs that can run sequentially
 # or in parallel
@@ -39,7 +40,7 @@ jobs:
         env:
           FILTER_REGEX_EXCLUDE: CHANGELOG.md
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          UPDATE_STATUS: false
+          VALIDATE_BIOME_FORMAT: false
           VALIDATE_JSCPD: false
           VALIDATE_JSON_PRETTIER: false
           VALIDATE_MARKDOWN_PRETTIER: false
