--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -51,4 +51,5 @@ jobs:
           VALIDATE_PYTHON_MYPY: false
           VALIDATE_PYTHON_PYINK: false
           VALIDATE_PYTHON_PYLINT: false
+          VALIDATE_PYTHON_RUFF_FORMAT: false
           VALIDATE_YAML_PRETTIER: false
